<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WaitApp</string>
    <string name="action_settings">Settings</string>
    
     <string name="username">Username</string>
      <string name="password">Password</string>
    
       <string name="login">Log In</string>
      
      <string name="welcome">Welcome </string>
     <string name="cancel">Cancel</string>
    <string name="log_in">Log in</string>
     <string name="money">Pay !</string>
    
     <string name="success">Success</string>
     
     <string name="start">Lets Order !</string>
         <string name="place">Lets Place !</string>
      <string name="drink">Special Drink ?</string>
        <string name="smoke">Smoke</string>
          <string name="nosmoke">No Smoke</string>
      

          <string name="add">Add to the Bill</string>
          
          
        <string name="type2">Menu Type 2 : long-pressing</string>
          
          
      <string name="find">Find</string>
      

        <string name="next">Next</string>
      
      
      
      
      <string name="action_search">Search</string>
      
      
      <string name="action_location_found">Location</string>
      
      
      <string name="action_refresh">Refresh</string>
      
      
      <string name="action_help">Help</string>
      
      
      <string name="action_check_updates">Update</string>
      
      
      
      
      
 
    <integer name="google_play_services_version">4030500</integer>

      
           <string name="howmany">How Many ?</string>
      
      
           <string name="in">In</string>
      <string name="out">Out</string>
      
      
     <string-array name="items">
       		 <item>Breakfast</item>
       		 <item>Lunch</item>
        	<item>Dinner</item>
        	<item>Snack</item>
    </string-array>
     
     
        <string-array name="drinks">
       		 <item>Wine</item>
       		 <item>Beer</item>
        	<item>Coke</item>
        	<item>Champagne</item>
        	<item>Cocktail</item>
        	<item>Juice</item>
    </string-array>
     
     

</resources>
