<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RL_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3e92d2"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.wait_person.UserPage" >

    
    
    
        <TextView
            android:id="@+id/TV_Place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/place"
             android:layout_centerHorizontal="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF" />
    
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
         android:layout_centerHorizontal="true"
         android:id="@+id/LL_Howmany" >


        <EditText
            android:id="@+id/ET_Howmany"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:ems="10"
            android:hint="@string/howmany"
            android:inputType="number"
            android:textColorHint="#000000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
           android:layout_below="@+id/LL_Howmany"
         android:id="@+id/LL_Location" >

        <RadioButton
            android:id="@+id/RB_Out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/out" />

        <RadioButton
            android:id="@+id/RB_In"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/in" />
    </LinearLayout>

    <requestFocus />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/LL_Location"
         android:id="@+id/LL_Smoke"  >

        <RadioButton
            android:id="@+id/RadioButton01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/smoke" />

        <RadioButton
            android:id="@+id/RadioButton02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nosmoke" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/LL_Smoke"  >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <Button
                android:id="@+id/BT_Cancel"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="170dp" >

            <Button
                android:id="@+id/BT_Find"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>