<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/RL_main"
    android:background="#3e92d2"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.wait_person.MainActivity" >

    <EditText
        android:id="@+id/ET_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="108dp"
        android:textColorHint="#000000"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName" />
    
      <requestFocus />

    <EditText
        android:id="@+id/ET_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ET_username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:hint="@string/password"
        android:textColorHint="#000000"
        android:ems="10"
        android:inputType="textPassword" >

      
    </EditText>

    <Button
        android:id="@+id/BT_Login"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/ET_password"
        android:layout_below="@+id/ET_password"
        android:layout_marginTop="38dp"
        android:text="@string/log_in" />

    <Button
        android:id="@+id/BT_Cancel"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/BT_Login"
        android:layout_alignBottom="@+id/BT_Login"
        android:layout_alignLeft="@+id/ET_username"
        android:text="@string/cancel" />
    
	    <TextView
	    android:id="@+id/tv" 
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text=""
	    />

	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/tv"
	        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
	        android:text="@string/login"
	         android:textColor="#FFFFFF"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
    
</RelativeLayout>
