<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/RL_main"
    android:background="#3e92d2"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.wait_person.Order" >

    
    
     <TextView
         android:id="@+id/TV_Start"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/start"
           android:layout_marginTop="20dp"
             android:layout_centerHorizontal="true"
             android:textColor="#FFFFFF"
	        android:textAppearance="?android:attr/textAppearanceLarge" >

    </TextView>
    
    
    <Spinner
        android:id="@+id/Sp_Items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/TV_Start"
        android:layout_marginTop="30dp" />

    <Switch
        android:id="@+id/SW_Drink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
          android:layout_below="@+id/Sp_Items"/>

    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Sp_Items"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/drink" />
    
    
    
     <Spinner
        android:id="@+id/Sp_Drinks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/SW_Drink"
        android:layout_marginTop="30dp" />

     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/Sp_Drinks"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp" >

         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:orientation="vertical" >

             <Button
                 android:id="@+id/BT_Cancel"
                 style="?android:attr/buttonStyleSmall"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/cancel" />
         </LinearLayout>

         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginLeft="170dp"
             android:orientation="vertical" >

             <Button
                 android:id="@+id/BT_Find"
                 style="?android:attr/buttonStyleSmall"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/next" />
         </LinearLayout>
     </LinearLayout>
    
</RelativeLayout>
